the output driver. It is recommended to drain queues with the previous
version before switching to this one.
********************************* WARNING *********************************

- greatly enhanced performance when compared to v3.
- added configuration directive "HUPisRestart" which enables to configure
  HUP to be either a full restart or "just" a leightweight way to
  close open files.
- added a setting "$OptimizeForUniprocessor" to enable users to turn off
  pthread_yield calls which are counter-productive on multiprocessor 
  machines (but have been shown to be useful on uniprocessors)
- reordered imudp processing. Message parsing is now done as part of main
  message queue worker processing (was part of the input thread)
  This should also improve performance, as potentially more work is
  done in parallel.
- bugfix: compressed syslog messages could be slightly mis-uncompressed
  if the last byte of the compressed record was a NUL
- added $UDPServerTimeRequery option which enables to work with
  less acurate timestamps in favor of performance. This enables querying
  of the time only every n-th time if imudp is running in the tight
  receive loop (aka receiving messsages at a high rate)
- doc bugfix: queue doc had wrong parameter name for setting controlling
  worker thread shutdown period
- restructured rsyslog.conf documentation
---------------------------------------------------------------------------
Version 3.21.7  [BETA] (rgerhards), 2008-11-11
- this is the new beta branch, based on the former 3.21.6 devel
- new functionality: ZERO property replacer nomatch option (from v3-stable)
---------------------------------------------------------------------------
Version 3.21.6  [DEVEL] (rgerhards), 2008-10-22
- consolidated time calls during msg object creation, improves performance
  and consistency
- bugfix: solved a segfault condition
- bugfix: subsecond time properties generated by imfile, imklog and